[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/audio_tab/audio_tab.gd" type="Script" id=4]
[ext_resource path="res://ui/gui/sliders/slider.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=3]

[node name="audio_tab" type="VBoxContainer"]
margin_right = 118.0
margin_bottom = 166.0
script = ExtResource( 4 )

[node name="master_bus" type="VBoxContainer" parent="."]
margin_right = 130.0
margin_bottom = 22.0
mouse_filter = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="master_bus"]
margin_right = 130.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "ui.settings.master_bus"
align = 1

[node name="HSlider" type="HSlider" parent="master_bus"]
margin_left = 13.0
margin_top = 14.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
max_value = 1.6
step = 0.05
value = 1.6
script = ExtResource( 5 )
id = "Master"

[node name="music_bus" type="VBoxContainer" parent="."]
margin_top = 26.0
margin_right = 130.0
margin_bottom = 48.0
mouse_filter = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="music_bus"]
margin_right = 130.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "ui.settings.music_bus"
align = 1

[node name="HSlider" type="HSlider" parent="music_bus"]
margin_left = 13.0
margin_top = 14.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
max_value = 1.6
step = 0.05
value = 1.6
script = ExtResource( 5 )
id = "music"

[node name="player_bus" type="VBoxContainer" parent="."]
margin_top = 52.0
margin_right = 130.0
margin_bottom = 74.0
mouse_filter = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="player_bus"]
margin_right = 130.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "ui.settings.player_bus"
align = 1

[node name="HSlider" type="HSlider" parent="player_bus"]
margin_left = 13.0
margin_top = 14.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
max_value = 1.6
step = 0.05
value = 1.6
script = ExtResource( 5 )
id = "player_sounds"

[node name="entity_bus" type="VBoxContainer" parent="."]
margin_top = 78.0
margin_right = 130.0
margin_bottom = 100.0
mouse_filter = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="entity_bus"]
margin_right = 130.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "ui.settings.entity_bus"
align = 1

[node name="HSlider" type="HSlider" parent="entity_bus"]
margin_left = 13.0
margin_top = 14.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.6
step = 0.05
value = 1.6
script = ExtResource( 5 )
id = "entity_sounds"

[node name="environment_bus" type="VBoxContainer" parent="."]
margin_top = 104.0
margin_right = 130.0
margin_bottom = 126.0
mouse_filter = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="environment_bus"]
margin_right = 130.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "ui.settings.environment_bus"
align = 1

[node name="HSlider" type="HSlider" parent="environment_bus"]
margin_left = 13.0
margin_top = 14.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.6
step = 0.05
value = 1.6
script = ExtResource( 5 )
id = "environment_sounds"

[node name="gui_bus" type="VBoxContainer" parent="."]
margin_top = 130.0
margin_right = 130.0
margin_bottom = 152.0
mouse_filter = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="gui_bus"]
margin_right = 130.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "ui.settings.gui_bus"
align = 1

[node name="HSlider" type="HSlider" parent="gui_bus"]
margin_left = 13.0
margin_top = 14.0
margin_right = 117.0
margin_bottom = 22.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.6
step = 0.05
value = 1.6
script = ExtResource( 5 )
id = "gui_sounds"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 156.0
margin_right = 130.0
margin_bottom = 166.0
custom_constants/margin_bottom = 10

[connection signal="slider_value_updated" from="master_bus/HSlider" to="." method="_on_slider_value_updated"]
[connection signal="slider_value_updated" from="music_bus/HSlider" to="." method="_on_slider_value_updated"]
[connection signal="slider_value_updated" from="player_bus/HSlider" to="." method="_on_slider_value_updated"]
[connection signal="slider_value_updated" from="entity_bus/HSlider" to="." method="_on_slider_value_updated"]
[connection signal="slider_value_updated" from="environment_bus/HSlider" to="." method="_on_slider_value_updated"]
[connection signal="slider_value_updated" from="gui_bus/HSlider" to="." method="_on_slider_value_updated"]
